--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.2",
+    "eslint": "^8.32.0",
+    "eslint-config-airbnb": "^19.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.1",
+    "stylelint": "^14.16.1",
+    "stylelint-config-standard": "^29.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "stylelint \"**/*.css\" ; npx eslint .",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -37,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "stylelint-config-idiomatic-order": "^9.0.0"
   }
 }
